--- a/src/app/components/shared/header-app/header-app.component.html
+++ b/src/app/components/shared/header-app/header-app.component.html
@@ -1,15 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">APP SWAPI</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="rutas[0].path" href="#">{{rutas[0].name}} <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="rutas[1].path" href="#">{{rutas[1].name}}</a>
         </li>
         <li class="nav-item">
@@ -25,9 +24,11 @@
           <a class="nav-link disabled" href="#">Disabled</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+      <span class="navbar-text">
+          <a class="nav-link" [routerLink]="rutas[5].path" href="#">{{rutas[5].name}}</a>
+      </span>
+      <span class="navbar-text">
+        <a class="nav-link" [routerLink]="rutas[6].path" href="#">{{rutas[6].name}}</a>
+      </span>
     </div>
   </nav>
