--- a/src/app/components/pages/films/film-info/film-info.component.html
+++ b/src/app/components/pages/films/film-info/film-info.component.html
@@ -1,6 +1,7 @@
-<h2>Detalle del Film id {{this.id_film}}</h2>
+
 
 <div *ngIf="filmDetail; else emptyId">
+  <h2>Detalle del Film " {{filmDetail.title}} "</h2>
   <img src="{{image}}">
     <ul>
         <li>Name: {{ filmDetail.title | uppercase }}</li>
@@ -12,6 +13,6 @@
 </div>
 
 <ng-template #emptyId>
-    <p>Dostn exist character with the</p>
+    <p>La Pelicula NO existe.</p>
     <button routerLink="/films">Volver a Films</button>
 </ng-template>
