--- a/src/app/components/shared/footer-app/footer-app.component.html
+++ b/src/app/components/shared/footer-app/footer-app.component.html
@@ -1,15 +1,24 @@
-<footer class="page-footer font-small unique-color-dark pt-4 bg-light">
-  <div class="container">
-      <ul class="list-unstyled list-inline text-center py-2">
-          <li class="list-inline-item">
-              <h5 class="mb-1">Register for free</h5>
-          </li>
-          <li class="list-inline-item">
-              <a href="#!" class="btn btn-outline-white btn-rounded">Sign up!</a>
-          </li>
-      </ul>
-  </div>
-  <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
-  </div>
+<footer class="pt-4 my-md-5 pt-md-5 border-top">
+    <div class="row">
+        <div class="col-12 col-md">
+            <img class="mb-2 rounded-circle" src="/assets/img/user.png" alt="" width="30" height="30">
+            <small class="d-block mb-3 text-muted">&copy; 2020 - Juan Pablo Muñoz</small>
+        </div>
+        <div class="col-6 col-md">
+            <h5>Redes Sociales</h5>
+            <ul class="list-unstyled text-small">
+                <li><a class="text-muted" target="_blank" href="#">Red 1</a></li>
+                <li><a class="text-muted" target="_blank" href="#">Red 2</a></li>
+                <li><a class="text-muted" target="_blank" href="#">Red 3</a></li>
+                <li><a class="text-muted" target="_blank" href="#">Red 4</a></li>
+            </ul>
+        </div>
+        <div class="col-6 col-md">
+            <h5>Grupos</h5>
+            <ul class="list-unstyled text-small">
+                <li><a class="text-muted" target="_blank" href="#">Grupo 1</a></li>
+                <li><a class="text-muted" target="_blank" href="#">Grupo 1</a></li>
+            </ul>
+        </div>
+    </div>
 </footer>
