--- a/src/app/components/shared/login/login.component.html
+++ b/src/app/components/shared/login/login.component.html
@@ -8,10 +8,20 @@
             <div class="form-group">
                 <input type="password" class="form-control" formControlName="pass" placeholder="pass">
             </div>
-            <button type="submit" class="btn btn-primary btn-lg">Login</button>
+            <div>
+                <button type="submit" class="btn btn-primary btn-lg">Login</button>
+            </div>
+            <div>
+                <a [routerLink]="['/register']" class="link">Ir a registrarse</a>
+            </div>
+
         </form>
+        
     </div>
+
 </div>  
+
+
 
 
 
