--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header-app></app-header-app>
-<router-outlet></router-outlet>
-<app-footer-app></app-footer-app>
+<div class="container mt-3">
+    <router-outlet></router-outlet>
+    <app-footer-app></app-footer-app>
+</div>
