mejoras guard y routing

--- a/src/app/components/pages/films/film-info/film-info.component.html
+++ b/src/app/components/pages/films/film-info/film-info.component.html
@@ -9,10 +9,10 @@
         <li>Productor: {{filmDetail.producer}}</li>
         <li>Specie: {{filmDetail.created}}</li>
     </ul>
-    <button routerLink="/films">Volver a Films</button>
+    <button routerLink="/filmslist">Volver a Films</button>
 </div>
 
 <ng-template #emptyId>
     <p>La Pelicula NO existe.</p>
-    <button routerLink="/films">Volver a Films</button>
+    <button routerLink="/filmslist">Volver a Films</button>
 </ng-template>
