--- a/src/app/components/pages/people/people-info/people-info.component.html
+++ b/src/app/components/pages/people/people-info/people-info.component.html
@@ -9,10 +9,10 @@
         <li>Color del Pelo: {{peopleDetail.hair_color | uppercase}}</li>
         <li>Color de Ojos: {{peopleDetail.eye_color}}</li>
     </ul>
-    <button routerLink="/people">Volver a People</button>
+    <button routerLink="/peoplelist">Volver a People</button>
 </div>
 
 <ng-template #emptyId>
     <p>El Personaje NO existe</p>
-    <button routerLink="/people">Volver a People</button>
+    <button routerLink="/peoplelist">Volver a People</button>
 </ng-template>
