--- a/src/app/components/pages/planets/planet-info/planet-info.component.html
+++ b/src/app/components/pages/planets/planet-info/planet-info.component.html
@@ -9,10 +9,10 @@
           <li>Orbitación: {{planetDetail.orbital_period}} days</li> 
           <li>Diametro: {{planetDetail.diameter}} KMS</li>
       </ul>
-      <button routerLink="/planets">Volver a Planets</button>
+      <button routerLink="/planetslist">Volver a Planets</button>
   </div>
   
   <ng-template #emptyId>
       <p>El Planeta NO existe</p>
-      <button routerLink="/planets">Volver a Planets</button>
+      <button routerLink="/planetslist">Volver a Planets</button>
   </ng-template>
