--- a/src/app/components/pages/species/specie-info/specie-info.component.html
+++ b/src/app/components/pages/species/specie-info/specie-info.component.html
@@ -9,10 +9,10 @@
           <li>Skin Colors: {{speciesDetail.skin_colors | uppercase}} days</li> 
           <li>Designation: {{speciesDetail.designation | uppercase}} KMS</li>
       </ul>
-      <button routerLink="/planets">Volver a Species</button>
+      <button routerLink="/specieslist">Volver a Species</button>
   </div>
   
   <ng-template #emptyId>
       <p>La Especie NO existe</p>
-      <button routerLink="/planets">Volver a Species</button>
+      <button routerLink="/specieslist">Volver a Species</button>
   </ng-template>
