--- a/src/app/components/shared/footer-app/footer-app.component.html
+++ b/src/app/components/shared/footer-app/footer-app.component.html
@@ -2,22 +2,22 @@
     <div class="row">
         <div class="col-12 col-md">
             <img class="mb-2 rounded-circle" src="/assets/img/user.png" alt="" width="30" height="30">
-            <small class="d-block mb-3 text-muted">&copy; 2020 - Juan Pablo Muñoz</small>
+            <small class="d-block mb-3 text-muted">&copy; 2020 - jpmunozv</small>
         </div>
         <div class="col-6 col-md">
             <h5>Redes Sociales</h5>
             <ul class="list-unstyled text-small">
-                <li><a class="text-muted" target="_blank" href="#">Red 1</a></li>
-                <li><a class="text-muted" target="_blank" href="#">Red 2</a></li>
-                <li><a class="text-muted" target="_blank" href="#">Red 3</a></li>
-                <li><a class="text-muted" target="_blank" href="#">Red 4</a></li>
+                <li><a class="text-muted" target="_blank" href="https://www.linkedin.com/in/jpmunozv/">Linkedin</a></li>
+                <li><a class="text-muted" target="_blank" href="https://twitter.com/juanpa_mv">Twitter</a></li>
+                <li><a class="text-muted" target="_blank" href="https://github.com/jpmunozv">Github</a></li>
             </ul>
         </div>
         <div class="col-6 col-md">
-            <h5>Grupos</h5>
+            <h5>Contacto</h5>
             <ul class="list-unstyled text-small">
-                <li><a class="text-muted" target="_blank" href="#">Grupo 1</a></li>
-                <li><a class="text-muted" target="_blank" href="#">Grupo 1</a></li>
+                <li><a class="text-muted" target="_blank">juan.munoz@avattar.com</a></li>
+                <li><a class="text-muted" target="_blank">jpmunozv@outlook.com</a></li>
+                <li><a class="text-muted" target="_blank">+569 96964710</a></li>
             </ul>
         </div>
     </div>
