--- a/src/app/components/shared/header-app/header-app.component.html
+++ b/src/app/components/shared/header-app/header-app.component.html
@@ -48,13 +48,10 @@
           <a class="nav-link" routerLink="/peoplelist">{{rutas[1].name}}</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" [routerLink]="rutas[2].path" href="#">{{rutas[2].name}}</a>
+            <a class="nav-link" routerLink="/planetslist">{{rutas[2].name}}</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" [routerLink]="rutas[3].path" href="#">{{rutas[3].name}}</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="rutas[4].path" href="#">{{rutas[4].name}}</a>
+            <a class="nav-link" routerLink="/species">{{rutas[3].name}}</a>
         </li>
       </ul>
      <span class="navbar-text">
