--- a/src/app/components/shared/header-app/header-app.component.html
+++ b/src/app/components/shared/header-app/header-app.component.html
@@ -1,38 +1,3 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">APP SWAPI</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="rutas[0].path" href="#">{{rutas[0].name}} <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="rutas[1].path" href="#">{{rutas[1].name}}</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" [routerLink]="rutas[2].path" href="#">{{rutas[2].name}}</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" [routerLink]="rutas[3].path" href="#">{{rutas[3].name}}</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="rutas[4].path" href="#">{{rutas[4].name}}</a>
-        </li>
-      </ul>
-     <span class="navbar-text">
-          <a class="nav-link" [routerLink]="rutas[5].path" href="#">{{rutas[5].name}}</a>
-      </span>
-      <span class="navbar-text">
-        <a class="nav-link" [routerLink]="rutas[6].path" href="#">{{rutas[6].name}}</a>
-      </span>
-      <span class="navbar-text">
-        <a class="nav-link" (click)="logout()" href="#">{{rutas[7].name}}</a>
-      </span> 
-    </div>
-  </nav> -->
-
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">APP SWAPI</a>
@@ -51,7 +16,7 @@
             <a class="nav-link" routerLink="/planetslist">{{rutas[2].name}}</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink="/species">{{rutas[3].name}}</a>
+            <a class="nav-link" routerLink="/specieslist">{{rutas[3].name}}</a>
         </li>
       </ul>
      <span class="navbar-text">
