--- a/src/app/components/pages/planets/planets-list/planets-list.component.html
+++ b/src/app/components/pages/planets/planets-list/planets-list.component.html
@@ -1,12 +1,14 @@
-<ul>
-    <li *ngFor="let planets of planetsList">
-       <img class="big" src="{{image}}">   
-       <ul>
-           <p>Nombre: {{planets.name | uppercase}}</p>
-           <P>Tipo de Terreno: {{planets.terrain | uppercase }} </P>
-           <button (click)="detallePlanets(planets.url)">Detalle</button> 
-           
-       </ul>
-   </li> 
-</ul>
+<div class="row row-cols-1 row-cols-md-2 g-4">
+    <div *ngFor="let planet of planetsList"> 
+        <div class="col">
+            <div class="card">
+                <img src="{{image}}" class="card-img-top" alt="...">
+                <div class="card-body">
+                <h5 class="card-title">PLANET: {{planet.name | uppercase}}</h5>
+                <button type="button" class="btn btn-warning" (click)="detallePlanets(planet.url)">Mas Info</button>
+                </div>
+            </div>
+        </div>
+    </div>
+ </div>
 <router-outlet></router-outlet>
