--- a/src/app/components/pages/species/specie-info/specie-info.component.html
+++ b/src/app/components/pages/species/specie-info/specie-info.component.html
@@ -1,18 +1,11 @@
-<div *ngIf="speciesDetail; else emptyId">
-    <h2>Detalle del Species " {{speciesDetail.name | uppercase}} "</h2>
-    <img class="big" src="{{image}}">
-      <ul>
-          <li>Name: {{ speciesDetail.name | uppercase }}</li>
-          <li>Homeworld: {{speciesDetail.homeworld | uppercase }}</li>
-          <li>Classification: {{speciesDetail.classification | uppercase}}</li>
-          <li>Language: {{speciesDetail.language | uppercase}} hours</li>
-          <li>Skin Colors: {{speciesDetail.skin_colors | uppercase}} days</li> 
-          <li>Designation: {{speciesDetail.designation | uppercase}} KMS</li>
-      </ul>
-      <button routerLink="/specieslist">Volver a Species</button>
-  </div>
-  
-  <ng-template #emptyId>
-      <p>La Especie NO existe</p>
-      <button routerLink="/specieslist">Volver a Species</button>
-  </ng-template>
+<div class="card" style="width: 38rem;">
+    <img src="{{image}}" class="card-img-top" alt="...">
+    <div class="card-body">
+        <h5 class="card-title">{{speciesDetail.name | uppercase}}</h5>
+        <p class="card-text">Classification: {{speciesDetail.classification | uppercase}}</p>
+        <p class="card-text">Language: {{speciesDetail.language | uppercase}}</p> 
+        <p class="card-text">Skin Colors: {{speciesDetail.skin_colors | uppercase}}</p>
+        <p class="card-text">Designation: {{speciesDetail.designation | uppercase}}</p> 
+        <a class="btn btn-primary" routerLink="/specieslist">Volver a Species</a>
+    </div>
+</div>
