--- a/src/app/components/shared/authentication/login/login.component.html
+++ b/src/app/components/shared/authentication/login/login.component.html
@@ -1,6 +1,6 @@
  <div class="row">
     <div class="col-md-6 mx-auto mt-5">
-        <h1>LOGIN</h1>
+        <h1>Ingreso</h1>
         <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
             <div class="form-group">
                 <input type="email" class="form-control" formControlName="email" placeholder="email">
