--- a/src/app/components/shared/authentication/register-done-message/register-done-message.component.html
+++ b/src/app/components/shared/authentication/register-done-message/register-done-message.component.html
@@ -3,9 +3,10 @@
         <div class="row justify-content-center">
             <div class="col-md-12 text-center">
                 <i class="fal fa-browser tamano-icono"></i>
-                <span class="display-1 d-block color-text-404">404</span>
+                <span class="display-1 d-block color-text-404">REGISTRO EXITOSO</span>
                 <hr>
-                <div class="mb-2 color-text-bajada">REGISTROS <br> EXITOSO !!</div>
+                <div class="mb-2 color-text-bajada">Favor, iniciar sesión.</div>
+                <div><a [routerLink]="['/login']" class="link">Ir a Login</a></div>
             </div>
         </div>
     </div>
