--- a/src/app/components/shared/authentication/register/register.component.html
+++ b/src/app/components/shared/authentication/register/register.component.html
@@ -1,7 +1,7 @@
 
 <div class="row">
     <div class="col-md-6 mx-auto mt-5">
-        <h1>REGISTER</h1>
+        <h1>Registro</h1>
         <form [formGroup]="registerForm" (ngSubmit)="register()">
             <div class="form-group">
                 <input type="email" class="form-control" formControlName="email" placeholder="email">
